// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio组件 快照测试 基本使用 1`] = `
Array [
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c1 > .sinoui-icon,
.c1 > .sinoui-svg-icon {
  font-size: 20px;
}

.c1.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c1.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c1 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c1 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c1:hover {
  background-color: rgba(0,0,0,0.04);
}

.c1:focus {
  background-color: rgba(63,81,181,0.04);
}

.c1.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c3 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

<span
    checked={false}
    className="c0 sinoui-base-button c1 sinoui-radio"
    color="primary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="c2 sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      className="c3 sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: #3f51b5;
}

.c1 > .sinoui-icon,
.c1 > .sinoui-svg-icon {
  font-size: 20px;
}

.c1.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c1.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c1 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c1 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c1:hover {
  background-color: rgba(63,81,181,0.04);
}

.c1:focus {
  background-color: rgba(63,81,181,0.04);
}

.c1.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c3 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

<span
    checked={true}
    className="c0 sinoui-base-button c1 sinoui-radio sinoui-radio--checked"
    color="primary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="c2 sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="c3 sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
]
`;

exports[`Radio组件 快照测试 带文字单选框 1`] = `
Array [
  .c0 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: pointer;
}

.c0 > .sinoui-checkbox,
.c0 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1::-moz-focus-inner {
  border-style: none;
}

.c1:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c2 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c2 > .sinoui-icon,
.c2 > .sinoui-svg-icon {
  font-size: 20px;
}

.c2.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c2.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c2 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c2 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c2:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2:focus {
  background-color: rgba(63,81,181,0.04);
}

.c2.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c2.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c2.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c4 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

<label
    className="sc-AxhUy c0 sinoui-form-control-label"
  >
    <span
      checked={false}
      className="c1 sinoui-base-button c2 sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c3 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        className="c4 sinoui-radio__input"
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>,
  .c0 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: pointer;
}

.c0 > .sinoui-checkbox,
.c0 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1::-moz-focus-inner {
  border-style: none;
}

.c1:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c2 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: #3f51b5;
}

.c2 > .sinoui-icon,
.c2 > .sinoui-svg-icon {
  font-size: 20px;
}

.c2.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c2.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c2 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c2 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c2:hover {
  background-color: rgba(63,81,181,0.04);
}

.c2:focus {
  background-color: rgba(63,81,181,0.04);
}

.c2.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c2.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c2.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c4 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

<label
    className="sc-AxhUy c0 sinoui-form-control-label"
  >
    <span
      checked={true}
      className="c1 sinoui-base-button c2 sinoui-radio sinoui-radio--checked"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c3 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={true}
        className="c4 sinoui-radio__input"
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>,
]
`;

exports[`Radio组件 快照测试 指定颜色 1`] = `
Array [
  .c0 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: default;
}

.c0 > .sinoui-checkbox,
.c0 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: none;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1::-moz-focus-inner {
  border-style: none;
}

.c1:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c2 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c2 > .sinoui-icon,
.c2 > .sinoui-svg-icon {
  font-size: 20px;
}

.c2.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c2.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c2 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c2 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c2:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2:focus {
  background-color: rgba(63,81,181,0.04);
}

.c2.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c2.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c2.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c4 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

<label
    className="sc-AxhUy c0 sinoui-form-control-label"
    disabled={true}
  >
    <span
      checked={false}
      className="c1 sinoui-base-button c2 sinoui-radio sinoui-radio--disabled"
      color="primary"
      disabled={true}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c3 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        className="c4 sinoui-radio__input"
        disabled={true}
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>,
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: #3f51b5;
}

.c1 > .sinoui-icon,
.c1 > .sinoui-svg-icon {
  font-size: 20px;
}

.c1.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c1.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c1 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c1 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c1:hover {
  background-color: rgba(63,81,181,0.04);
}

.c1:focus {
  background-color: rgba(63,81,181,0.04);
}

.c1.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c3 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {

}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

<span
    checked={true}
    className="c0 sinoui-base-button c1 sinoui-radio sinoui-radio--checked"
    color="primary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="c2 sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="c3 sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: #f50057;
}

.c1 > .sinoui-icon,
.c1 > .sinoui-svg-icon {
  font-size: 20px;
}

.c1.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c1.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c1 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c1 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c1:hover {
  background-color: rgba(245,0,87,0.04);
}

.c1:focus {
  background-color: rgba(245,0,87,0.04);
}

.c1.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c3 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {

}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

<span
    checked={true}
    className="c0 sinoui-base-button c1 sinoui-radio sinoui-radio--checked"
    color="secondary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="c2 sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="c3 sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: #f44336;
}

.c1 > .sinoui-icon,
.c1 > .sinoui-svg-icon {
  font-size: 20px;
}

.c1.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c1.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c1 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c1 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c1:hover {
  background-color: rgba(244,67,54,0.04);
}

.c1:focus {
  background-color: rgba(244,67,54,0.04);
}

.c1.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c3 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {

}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

<span
    checked={true}
    className="c0 sinoui-base-button c1 sinoui-radio sinoui-radio--checked"
    color="error"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="c2 sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="c3 sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: #ff9800;
}

.c1 > .sinoui-icon,
.c1 > .sinoui-svg-icon {
  font-size: 20px;
}

.c1.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c1.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c1 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c1 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c1:hover {
  background-color: rgba(255,152,0,0.04);
}

.c1:focus {
  background-color: rgba(255,152,0,0.04);
}

.c1.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c3 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {

}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {

}

<span
    checked={true}
    className="c0 sinoui-base-button c1 sinoui-radio sinoui-radio--checked"
    color="warning"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="c2 sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="c3 sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: #4caf50;
}

.c1 > .sinoui-icon,
.c1 > .sinoui-svg-icon {
  font-size: 20px;
}

.c1.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c1.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c1 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c1 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c1:hover {
  background-color: rgba(76,175,80,0.04);
}

.c1:focus {
  background-color: rgba(76,175,80,0.04);
}

.c1.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c3 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {

}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

<span
    checked={true}
    className="c0 sinoui-base-button c1 sinoui-radio sinoui-radio--checked"
    color="success"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="c2 sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="c3 sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: #2196f3;
}

.c1 > .sinoui-icon,
.c1 > .sinoui-svg-icon {
  font-size: 20px;
}

.c1.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c1.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c1 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c1 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c1:hover {
  background-color: rgba(33,150,243,0.04);
}

.c1:focus {
  background-color: rgba(33,150,243,0.04);
}

.c1.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c1.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c3 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {

}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {

}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

<span
    checked={true}
    className="c0 sinoui-base-button c1 sinoui-radio sinoui-radio--checked"
    color="info"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="c2 sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="c3 sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
]
`;

exports[`Radio组件 快照测试 设置只读 1`] = `
Array [
  .c0 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: default;
}

.c0 > .sinoui-checkbox,
.c0 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: none;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1::-moz-focus-inner {
  border-style: none;
}

.c1:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c2 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c2 > .sinoui-icon,
.c2 > .sinoui-svg-icon {
  font-size: 20px;
}

.c2.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c2.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c2 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c2 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c2:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2:focus {
  background-color: rgba(63,81,181,0.04);
}

.c2.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c2.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c2.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c4 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

<label
    className="sc-AxhUy c0 sinoui-form-control-label"
    disabled={true}
  >
    <span
      checked={false}
      className="c1 sinoui-base-button c2 sinoui-radio sinoui-radio--disabled"
      color="primary"
      disabled={true}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c3 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        className="c4 sinoui-radio__input"
        disabled={true}
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>,
  .c0 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: default;
}

.c0 > .sinoui-checkbox,
.c0 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: none;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1::-moz-focus-inner {
  border-style: none;
}

.c1:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c2 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c2 > .sinoui-icon,
.c2 > .sinoui-svg-icon {
  font-size: 20px;
}

.c2.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c2.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c2 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c2 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c2:hover {
  background-color: rgba(0,0,0,0.04);
}

.c2:focus {
  background-color: rgba(63,81,181,0.04);
}

.c2.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c2.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c2.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c4 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c1:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

<label
    className="sc-AxhUy c0 sinoui-form-control-label"
    readOnly={true}
  >
    <span
      checked={false}
      className="c1 sinoui-base-button c2 sinoui-radio sinoui-radio--readOnly"
      color="primary"
      disabled={true}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c3 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        className="c4 sinoui-radio__input"
        onChange={[Function]}
        readOnly={true}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>,
]
`;
